Fixes title bar height on mobile

--- a/src/_scss/layout/_overview.scss
+++ b/src/_scss/layout/_overview.scss
@@ -277,7 +277,6 @@ div.main {
                         color: $grey;
                         display: block;
                         width: 100%;
-                        height: 100%;
                         padding: 0.5em 1em;
                         font-weight: normal;
 
